# file-portal

./: .gitignore  CHANGELOG.md  CLAUDE_README.md  DOCS-AUDIT-CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
coordination/: README.md
coordination/messages/: 2026-07-05T0910Z--linux-to-desktop--windows-work-brief.md  2026-07-05T11-30--desktop-to-linux--build-and-status-report.md  2026-07-08T00-30--desktop-to-linux--w5-results-status-feed-regression.md  2026-07-08T04-50--linux-to-desktop--l65-done-status-feed-live.md  2026-07-09T23-05--linux-to-desktop--w7-semantics-force-scan.md  2026-07-12T00-01--desktop-to-linux--converter-spaces-in-filename-defect.md  2026-07-12T00-20--desktop-to-linux--exporter-inbox-rel-double-library.md  2026-07-12T00-38--linux-to-desktop--l13-l14-fixed-live-verified.md  (+3 more)
docs/: 00-overview.md  01-architecture.md  02-tailscale-setup.md  03-windows-widget.md  04-linux-receiver.md  05-allocation-rules.md  06-security-model.md  07-development-guide.md  08-roadmap.md  09-linux-dashboard.md  10-library-pipeline-plan.md  11-gpu-pipeline-revamp.md  12-phase4-rewiring.md  13-control-room-design.md  14-remote-projection.md  15-survival-audit.md  16-control-room-face.md
linux-converter/: README.md  pyproject.toml  requirements.txt
linux-converter/config/: converter.toml
linux-converter/converter/: bundle.py  config.py  engines.py  exporter.py  main.py  status.py
linux-converter/scripts/: install.sh
linux-converter/systemd/: file-portal-converter.service
linux-converter/tests/: test_bundle.py  test_engines.py  test_exporter.py  test_main.py
linux-dashboard/: README.md  pyproject.toml  requirements.txt
linux-dashboard/dashboard/: config.py  main.py  scanner.py  watcher.py  window.py
linux-dashboard/dashboard/widgets/: file_tree.py  photo_grid.py  settings_popover.py
linux-dashboard/scripts/: file-portal-dashboard.desktop  install.sh
linux-receiver/: README.md  pyproject.toml  requirements.txt
linux-receiver/allocator/: config.py  main.py  rules.py  status.py
linux-receiver/config/: rules.toml
linux-receiver/scripts/: install.sh
linux-receiver/systemd/: file-portal-allocator.service
linux-receiver/tests/: test_allocator.py  test_rules.py
prototypes/: README.md
scripts/: setup-tailscale-ssh.md
windows-converter/: README.md  analyst.py  convert_and_ship.py  events.py  fidelity_audit.py  watch_and_convert.py
windows-widget/: README.md  package-lock.json  package.json  portals.json
windows-widget/src-tauri/: Cargo.toml  tauri.conf.json
windows-widget/src-tauri/capabilities/: default.json
windows-widget/src-tauri/icons/: icon.icns
windows-widget/src-tauri/src/: assay.rs  config.rs  events.rs  line.rs  main.rs  preflight.rs  room.rs  status.rs  transfer.rs  vault.rs  watcher.rs
(+14 files in other folders)
