[project]
name = "file-portal-allocator"
version = "0.1.0"
description = "Watches inbox/ and sorts incoming files according to rules.toml"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0,<5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# Make `pytest tests/` work without installing the package (CI runs it from a bare venv).
pythonpath = ["."]
