[package]
name = "file-portal-widget"
version = "0.1.0"
description = "Drag-and-drop portal widgets that push files to a Linux box over Tailscale."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
