[package]
name = "file-portal-widget"
version = "0.1.0"
description = "Drag-and-drop portal widgets that push files to a Linux box over Tailscale."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
# S37: Windows Job Objects — so a force-killed / crashed widget can't orphan its watcher.
# 0.61 is already in the lock (tauri pulls it), so this adds no new version.
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
